# queuereader

./: .dockerignore  .env-dev  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  test_messages_producer.py
app/: factory.py  services.py
config/: settings.py
domain/: models.py
infrastructure/: base_client.py  file_storage.py  kafka_client.py  rabbitmq_client.py
presentation/: cli.py
queuereader/: main.py
